fix(): don`t stretch small image

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
+  padding: 0;
   text-align: center;
   width: 100%;
   height: 100%;
@@ -13,13 +13,11 @@ header {
 }
 
 section {
-  width: 90%;
-  height: 600px;
+  width: 90vw;
+  height: calc(100vh - 80px);
   margin: auto;
   overflow: hidden;
   outline: 1px solid gray;
-  display: flex;
-  align-items: center;
 }
 
 .appbar {
