--- a/src/components/ZoomAndPan/index.css
+++ b/src/components/ZoomAndPan/index.css
@@ -1,16 +1,8 @@
-.znp {
-  width: 100%;
-  text-align: -webkit-center;
-}
-
-.znp.vertical {
-  height: 100%;
-}
-
 .znp_wrapper {
+  max-width: 100%;
+  max-height: 100%;
   position: relative;
   transition-property: translate, scale;
-  height: -webkit-fill-available;
 }
 
 .znp_wrapper > * {
